--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,61 +1,86 @@
 ---
+import Icon from "astro-icon"
+
+import { format } from "date-fns"
+
 interface Props {
-	title: string;
-	body: string;
-	href: string;
+    role: string
+    company: string
+    duration: {
+        from: Date
+        to: Date | string
+    }
+    link?: string
+    description: string
+    languages: string[]
 }
 
-const { href, title, body } = Astro.props;
+const { company, description, duration, languages, role, link } = Astro.props
+
+const formatDate = (value: Date | string) => {
+    if (typeof value === "string") {
+        return value
+    } else {
+        return format(value, "MMM yyy")
+    }
+}
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
-</li>
-<style>
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 1px;
-		background-color: #23262d;
-		background-image: none;
-		background-size: 400%;
-		border-radius: 7px;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
-	}
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: calc(1.5rem - 1px);
-		border-radius: 8px;
-		color: white;
-		background-color: #23262d;
-		opacity: 0.8;
-	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-		background-image: var(--accent-gradient);
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent-light));
-	}
-</style>
+<a href={link} class="cursor-pointer" target="_blank" rel="no-referrer">
+    <li
+        class="flex flex-col lg:flex-row gap-x-3 gap-y-2 transition-all rounded-sm group/item hover:bg-gray-400/10 hover:shadow-md lg:px-3 py-5 group-hover/cards:[&:not(:hover)]:opacity-50"
+    >
+        <p class="min-w-[13rem] text-sm">
+            {formatDate(duration.from)} - {formatDate(duration.to)}
+        </p>
+
+        <div class="flex flex-col space-y-5">
+            <p
+                class="text-md font-medium lg:font-semibold text-slate-200 hover:text-slate-300 group-hover/item:text-green-400 flex lg:flex-row items-baseline"
+            >
+                <>
+                    {role} &centerdot; {company}
+                    {
+                        link && (
+                            <svg
+                                class="h-3 transition-all group-hover/item:translate-x-1 group-hover/item:-translate-y-1"
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="24"
+                                height="24"
+                                viewBox="0 0 24 24"
+                            >
+                                <path
+                                    fill="none"
+                                    stroke="currentColor"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    stroke-width="2.5"
+                                    d="M6 19L19 6m0 0v12.48M19 6H6.52"
+                                />
+                            </svg>
+                        )
+                    }
+                </>
+            </p>
+            <p class="text-white/70 text-sm">{description}</p>
+            <ul class="flex flex-row gap-2 flex-wrap">
+                {
+                    languages.map((language) => (
+                        <li class="bg-green-400/20 text-green-300 text-xs rounded-full px-2 py-1">
+                            {language}
+                        </li>
+                    ))
+                }
+            </ul>
+        </div>
+        <!-- <a href={href}>
+        <h2>
+            {title}
+            <span>&rarr;</span>
+        </h2>
+        <p>
+            {body}
+        </p>
+    </a> -->
+    </li>
+</a>
