--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,123 +1,336 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/BaseLayout.astro"
+import Card from "../components/Card.astro"
+import NavLinks from "../components/NavLinks"
+import { Icon } from "astro-icon"
+import type { Code, Debug } from "astro:components"
+
+type ResumeProps = {
+    role: string
+    company: string
+    duration: {
+        from: Date
+        to: Date | string
+    }
+    link?: string
+    description: string
+    languages: string[]
+}
+
+const resume: ResumeProps[] = [
+    {
+        company: "National Agency for AI and Robotics",
+        role: "Software Developer",
+        link: "https://ncair.nitda.gov.ng/",
+        description: "",
+        duration: { from: new Date("2023-8"), to: "Present" },
+        languages: ["Flutter", "React", "Nodejs", "Python"],
+    },
+    {
+        company: "Freelance",
+        role: "Fullstack Web Developer",
+        description:
+            "Creating web software solutions for client according to their specifications",
+        duration: { from: new Date("2022-9"), to: new Date("2023-7") },
+        languages: [
+            "Next.js",
+            "React",
+            "Typescript",
+            "React Native",
+            "Express.js",
+            "PostgreSQL",
+            "TailwindCSS",
+        ],
+    },
+    {
+        company: "3.14 Limited",
+        role: "Fullstack Web Developer",
+        description: "",
+        link: "https://314ltd.com/",
+        duration: { from: new Date("2022-7"), to: new Date("2022-9") },
+        languages: ["Typscript", "Firebase", "React", "Tailwind", "Nodejs"],
+    },
+    {
+        company: "Yiaga Africa",
+        role: "Fullstack Web Developer - Intern",
+        link: "https://yiaga.org/",
+        description:
+            "Deliver high-quality, robust production code for a diverse array of projects for clients including Harvard Business School, Everytown for Gun Safety, Pratt Institute, Koala Health, Vanderbilt University, The 19th News, and more. Provide leadership within engineering department through close collaboration, knowledge shares, and mentorship.",
+        duration: { from: new Date("2021-8"), to: new Date("2021-9") },
+        languages: [
+            "Typscript",
+            "Firebase",
+            "Hasura",
+            "GraphQL",
+            "D3.js",
+            "PostgreSQL",
+            "Python",
+        ],
+    },
+    {
+        company: "Logical Address",
+        role: "Fullstack Web Developer",
+        description:
+            "Deliver high-quality, robust production code for a diverse array of projects for clients including Harvard Business School, Everytown for Gun Safety, Pratt Institute, Koala Health, Vanderbilt University, The 19th News, and more. Provide leadership within engineering department through close collaboration, knowledge shares, and mentorship.",
+        duration: { from: new Date("2019-9"), to: new Date("2019-12") },
+        languages: [
+            "Javascript",
+            "Typscript",
+            "Firebase",
+            "Next.js",
+            "Preact",
+            "Express.js",
+            "Cloudinary",
+        ],
+    },
+    {
+        company: "Mercy Corps",
+        link: "https://nigeria.mercycorps.org/",
+        role: "Mobile Application Developer",
+        description:
+            "Deliver high-quality, robust production code for a diverse array of projects for clients including Harvard Business School, Everytown for Gun Safety, Pratt Institute, Koala Health, Vanderbilt University, The 19th News, and more. Provide leadership within engineering department through close collaboration, knowledge shares, and mentorship.",
+        duration: { from: new Date("2022-6"), to: new Date("2022-10") },
+        languages: ["Javascript", "Typscript", "Firebase"],
+    },
+]
+
+const changeUrlAnchor = (anchor: string) => {
+    var hash = location.hash.replace("#", anchor)
+    window.addEventListener("hashchange", () => {
+        location.hash.replace("#", hash)
+    })
+}
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<svg
-			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
-			fill="none"
-			xmlns="http://www.w3.org/2000/svg"
-			aria-hidden="true"
-		>
-			<path
-				fill-rule="evenodd"
-				clip-rule="evenodd"
-				d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
-				fill="url(#paint0_linear_1805_24383)"></path>
-			<defs>
-				<linearGradient
-					id="paint0_linear_1805_24383"
-					x1="247.358"
-					y1="0"
-					x2="247.358"
-					y2="622.479"
-					gradientUnits="userSpaceOnUse"
-				>
-					<stop stop-opacity="0.9"></stop>
-					<stop offset="1" stop-opacity="0.2"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
-</Layout>
+<script>
+    document.addEventListener("scroll", () => {
+        document.querySelectorAll("section").forEach((element) => {
+            let top = window.scrollY
+            let distance = element.offsetTop - (window.scrollY * 0.7)
+            // let otherDistance = element.offsetTop
+            // console.log({ top, distance, otherDistance })
+            let hash = `#${element.getAttribute("id")}`
+            // console.log({ locationhash: location.hash, hash })
+            if (
+                distance < top &&
+                top < distance + element.offsetHeight &&
+                location.hash != hash
+            ) {
+                history.pushState({}, "", hash)
+                // window.location.hash = (hash);
+                // currentHash = hash;
+            }
+        })
+    })
+</script>
 
-<style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}
-</style>
+<Layout title="Salim Hussaini">
+    <main
+        class="h-screen lg:grid lg:grid-cols-2 lg:justify-items-center lg:px-56 py-10 px-5"
+    >
+        <div>
+            <div
+                class="flex flex-col lg:justify-around lg:h-screen sticky top-0"
+            >
+                <div>
+                    <div class="mb-10 lg:mb-20">
+                        <h1
+                            class="text-5xl tracking-tight lg:text-6xl font-bold mb-4 text-slate-200"
+                        >
+                            Salim Hussaini
+                        </h1>
+                        <p
+                            class="tracking-tight lg:text-3xl font-semibold mb-6 text-slate-200"
+                        >
+                            Fullstack Software Engineer
+                        </p>
+
+                        <p class="w-[75%]">
+                            I build accessible, inclusive products and digital
+                            experiences for the web.
+                        </p>
+                    </div>
+
+                    <div class="hidden lg:flex">
+                        <NavLinks client:load />
+                    </div>
+                </div>
+
+                <div>
+                    <ul class="flex flex-row space-x-4">
+                        <!-- <li>GitHub</li> -->
+                        <a
+                            href="https://github.com/SummaDiaboli/"
+                            target="_blank"
+                            rel="no-referrer"
+                        >
+                            <Icon
+                                name="github"
+                                pack="fontisto"
+                                class="h-6 text-slate-400 hover:text-slate-200 cursor-pointer"
+                            /></a
+                        >
+
+                        <a
+                            href="https://www.linkedin.com/in/salim-hussaini-059a33108/"
+                            target="_blank"
+                            rel="no-referrer"
+                        >
+                            <Icon
+                                name="linkedin"
+                                pack="icomoon-free"
+                                class="h-6 text-slate-400 hover:text-slate-200 cursor-pointer"
+                            />
+                        </a>
+
+                        <!-- <li>LinkedIn</li> -->
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="py-24 flex flex-col space-y-20 lg:space-y-32">
+            <section
+                id="about"
+                class="lg:flex lg:flex-col lg:space-y-5 scroll-mt-[7rem]"
+            >
+                <div
+                    class="sticky top-0 z-20 -mx-6 mb-4 w-screen bg-slate-900 75 px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:sr-only lg:relative lg:top-auto lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-0"
+                >
+                    <h2
+                        class="text-sm font-bold uppercase tracking-widest text-slate-200 lg:sr-only"
+                    >
+                        About
+                    </h2>
+                </div>
+
+                <p>
+                    Back in 2012, I decided to try my hand at creating custom
+                    Tumblr themes and tumbled head first into the rabbit hole of
+                    coding and web development. Fast-forward to today, and I’ve
+                    had the privilege of building software for an advertising
+                    agency, a start-up, a student-led design studio, and a huge
+                    corporation.
+                </p>
+                <p>
+                    My main focus these days is building products and leading
+                    projects for our clients at Upstatement. In my free time
+                    I've also released an online video course that covers
+                    everything you need to know to build a web app with the
+                    Spotify API.
+                </p>
+                <p>
+                    When I’m not at the computer, I’m usually rock climbing,
+                    hanging out with my wife and two cats, or running around
+                    Hyrule searching for Korok seedsKorok seeds.
+                </p>
+            </section>
+
+            <section id="experience" class="scroll-mt-[7rem]">
+                <div
+                    class="sticky top-0 z-20 -mx-6 mb-4 w-screen bg-slate-900 75 px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:sr-only lg:relative lg:top-auto lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-0"
+                >
+                    <h2
+                        class="text-sm font-bold uppercase tracking-widest text-slate-200 lg:sr-only"
+                    >
+                        Experience
+                    </h2>
+                </div>
+
+                <ul class="flex flex-col gap-y-5 lg:gap-y-10 group/cards">
+                    {resume.map((data) => <Card {...data} />)}
+                </ul>
+
+                <button
+                    class="text-slate-200 flex flex-row gap-x-1 items-center group mt-6"
+                >
+                    <p
+                        class="group-hover:underline group-hover:decoration-green-400 group-hover:underline-offset-4"
+                    >
+                        View Full Resume
+                    </p>
+
+                    <svg
+                        class="group-hover:translate-x-2 transition-all"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="24"
+                        viewBox="0 0 16 9"
+                        ><path
+                            fill="currentColor"
+                            d="M12.5 5h-9c-.28 0-.5-.22-.5-.5s.22-.5.5-.5h9c.28 0 .5.22.5.5s-.22.5-.5.5Z"
+                        ></path><path
+                            fill="currentColor"
+                            d="M10 8.5a.47.47 0 0 1-.35-.15c-.2-.2-.2-.51 0-.71l3.15-3.15l-3.15-3.15c-.2-.2-.2-.51 0-.71c.2-.2.51-.2.71 0l3.5 3.5c.2.2.2.51 0 .71l-3.5 3.5c-.1.1-.23.15-.35.15Z"
+                        ></path></svg
+                    >
+                </button>
+            </section>
+
+            <footer class="max-w-md pb-16 text-sm text-slate-500 sm:pb-0">
+                Loosely designed in Figma and coded in Visual Studio Code by
+                yours truly. Built with Astro and Tailwind CSS, deployed with
+                Vercel. All text is set in the Inter typeface.
+            </footer>
+        </div>
+    </main>
+</Layout>
+<!-- <main>
+        <svg
+            class="astro-a"
+            width="495"
+            height="623"
+            viewBox="0 0 495 623"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            aria-hidden="true"
+        >
+            <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
+                fill="url(#paint0_linear_1805_24383)"></path>
+            <defs>
+                <linearGradient
+                    id="paint0_linear_1805_24383"
+                    x1="247.358"
+                    y1="0"
+                    x2="247.358"
+                    y2="622.479"
+                    gradientUnits="userSpaceOnUse"
+                >
+                    <stop stop-opacity="0.9"></stop>
+                    <stop offset="1" stop-opacity="0.2"></stop>
+                </linearGradient>
+            </defs>
+        </svg>
+        <h1>Welcome to <span class="text-gradient">Salim's World</span></h1>
+        <p class="instructions">
+            To get started, open the directory <code>src/pages</code> in your
+            project.<br />
+            <strong>Code Challenge:</strong> Tweak the "Welcome to Astro"
+            message above.
+        </p>
+        <ul role="list" class="link-card-grid">
+            <Card
+                href="https://docs.astro.build/"
+                title="Documentation"
+                body="Learn how Astro works and explore the official API docs."
+            />
+            <Card
+                href="https://astro.build/integrations/"
+                title="Integrations"
+                body="Supercharge your project with new frameworks and libraries."
+            />
+            <Card
+                href="https://astro.build/themes/"
+                title="Themes"
+                body="Explore a galaxy of community-built starter themes."
+            />
+            <Card
+                href="https://astro.build/chat/"
+                title="Community"
+                body="Come say hi to our amazing Discord community. ❤️"
+            />
+        </ul>
+    </main> -->
