--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -103,7 +103,7 @@ import ProfileBriefLink from "../components/ProfileBriefLink.astro"
 
 <Layout title="Salim Hussaini">
     <main
-        class="h-screen lg:grid lg:grid-cols-2 lg:justify-items-center lg:px-56 px-5"
+        class="h-screen lg:grid lg:grid-cols-2 lg:justify-items-center lg:px-56 px-5 py-10 lg:py-0"
     >
         <div>
             <div
