--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -26,7 +26,7 @@ const formatDate = (value: Date | string) => {
 }
 ---
 
-<a href={link} class="cursor-pointer" target="_blank" rel="no-referrer">
+<a href={link} class="cursor-pointer px-5" target="_blank" rel="no-referrer">
     <li
         class="flex flex-col lg:flex-row gap-x-3 gap-y-2 transition-all rounded-sm group/item lg:hover:bg-gray-400/10 lg:hover:shadow-md lg:px-3 py-5 lg:group-hover/cards:[&:not(:hover)]:opacity-50"
     >
