--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,7 +10,11 @@ const { title } = Astro.props
 <html lang="en" class="scroll-smooth">
     <head>
         <meta charset="UTF-8" />
-        <meta name="description" content="Astro description" />
+        <meta name="og:image" content="/assets/images/og.svg" />
+        <meta name="og:twitter" content="/assets/images/og.svg" />
+        <meta name="og:description" content="Portfolio" />
+        <meta name="description" content="Portfolio" />
+        <meta name="og:title" content="Salim Hussaini" />
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="generator" content={Astro.generator} />
