--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,8 +10,8 @@ const { title } = Astro.props
 <html lang="en" class="scroll-smooth">
     <head>
         <meta charset="UTF-8" />
-        <meta name="og:image" content="/assets/images/og.svg" />
-        <meta name="og:twitter" content="/assets/images/og.svg" />
+        <meta name="og:image" content="/og.svg" />
+        <meta name="og:twitter" content="/og.svg" />
         <meta name="og:description" content="Portfolio" />
         <meta name="description" content="Portfolio" />
         <meta name="og:title" content="Salim Hussaini" />
