--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,5 +1,5 @@
 ---
-import MyPDF from "../components/MyPDF"
+import MyPDF from "../components/Home/MyPDF"
 import BaseLayout from "../layouts/BaseLayout.astro"
 import ResumeLayout from "../layouts/ResumeLayout.astro"
 ---
@@ -7,4 +7,4 @@ import ResumeLayout from "../layouts/ResumeLayout.astro"
 <ResumeLayout title="Resume">
     <MyPDF client:load />
 </ResumeLayout>
-<!-- ../components/MyPDF -->
+<!-- ../components/MyPDF -->../components/Home/MyPDF
