remove import text

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -7,4 +7,4 @@ import ResumeLayout from "../layouts/ResumeLayout.astro"
 <ResumeLayout title="Resume">
     <MyPDF client:load />
 </ResumeLayout>
-<!-- ../components/MyPDF -->../components/Home/MyPDF
+<!-- ../components/MyPDF -->
